--- a/popup.html
+++ b/popup.html
@@ -22,11 +22,13 @@
       <div class="arrow" aria-hidden="true">&#x2191;</div>
     </div>
     <div class="sidebar" id="sidebar">
-      <button id="backButton">Back</button>
+      <div class="sidebar-header">
+        <button id="backButton">Back</button> <!-- Changed to backButton without arrow -->
+      </div>
       <button id="lockButton">Lock</button>
       <button id="githubButton">GitHub</button>
       <button id="supportButton">Support</button>
-      <button id="aboutButton">About</button>
+      <button id="aboutButton">About</button> <!-- About button retained as a dead button -->
       <div class="version">Version 1.0.0</div>
     </div>
   </div>
